fix layout and horizontal scroll issues

--- a/css styling/global.css
+++ b/css styling/global.css
@@ -19,13 +19,14 @@ html, body {
 .indexcard{
     background-color: white;
     width: 500px;
-    height: 340px;
+    min-height: 340px;
     margin: auto;
     border: 2px solid rgb(234, 237, 236);
     border-radius: 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-sizing: border-box;
 }
 .head1{
     
